using System.Collections;
using System.Collections.Generic;
using UnityEngine;


// Exit to don't have problem in naming Function
public class AnimationString : MonoBehaviour
{
    internal static string isGround = "isGround";
    internal static string jumpTriger = "jump";
    internal static string yVelocity = "yVelocity";
    internal static string attackTriger = "attack";
    internal static string canMove = "canMove";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string hasTarget = "hasTarget";
    internal static string IsAlive = "IsAlive";
    internal static string isHit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity= "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string rangeAttackTriger= "rangeAttack";
}